# kanji-learn

./: .gitignore  KacperTumulec (1).docx  KacperTumulec (12) .docx  KacperTumulec16kwiecien .docx  KacperTumulec8kwiecien .docx  ~$cperTumulec (1).docx  ~$cperTumulec (12) .docx
backend/: database.py  main.py  models.py  pyproject.toml  schemas.py  services.py
backend/scripts/: add_sentences_data.py  add_vocab_data.py  daily_news_data.py  sentences_script.py  vocabulary_script.py
backend/test_data/: sentences_all_levels.csv  vocabulary_all_levels.csv
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.jsx  index.js
frontend/src/Data/: Categories.js
frontend/src/components/: ErrorLogin.jsx  ErrorMessage.jsx  Header.jsx  Login.jsx  QuizApp.css  QuizApp.jsx  Register.jsx
frontend/src/components/Chart/: ChartBar.jsx
frontend/src/components/Footer/: Footer.jsx
frontend/src/components/Header/: Header.css  Header.jsx
frontend/src/components/NotFound/: NotFound.css  NotFound.jsx
frontend/src/components/Pages/Home/: Home.css  Home.jsx
frontend/src/components/Pages/Quiz/: Quiz.css  Quiz.jsx
frontend/src/components/Pages/Result/: Result.css  Result.jsx  ResultTable.css  ResultTable.jsx
frontend/src/components/Question/: Question.css  Question.jsx
frontend/src/context/: UserContext.jsx
