[tool.poetry]
name = "kanji-learn"
version = "0.1.0"
description = "Dependencies needed for kanji learn app backend"
authors = ["repcaKT <kacper.tumulec4@gmail.com>"]
readme = "README.md"
packages = [{include = "kanji_learn"}]

[tool.poetry.dependencies]
python = "^3.7.1"
fastapi = "^0.88.0"
sqlalchemy = "^1.4.45"
httpx = "^0.23.1"
passlib = "^1.7.4"


[tool.poetry.group.dev.dependencies]
beautifulsoup4 = "^4.11.1"
pandas = "1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
